--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -21,7 +21,7 @@
                         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img class="w-100" src="./images/book_bg.jfif" alt="First slide">
+                                    <img class="w-100" src="./images/165965.jpg" alt="First slide">
                                 </div>
                                 <div class="carousel-item">
                                     <img class="w-100" src="./images/book_old.jfif" alt="Second slide">
