--- a/templates/partials/headLinks.hbs
+++ b/templates/partials/headLinks.hbs
@@ -7,4 +7,4 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css"
     integrity="sha512-PgQMlq+nqFLV4ylk1gwUOgm6CtIIXkKwaIHp/PAIWHzig/lKZSEGKEysh0TCVbHJXCLN7WetD8TFecIky75ZfQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-<title>Index</title>
+<title>Weather App</title>
